logs/stomp_moveit/build.make.025.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp: In member function ‘virtual bool stomp_moveit::StompPlanner::solve(planning_interface::MotionPlanDetailedResponse&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:307:38: error: ‘__gnu_cxx::__alloc_traits<std::allocator<std::shared_ptr<robot_trajectory::RobotTrajectory> > >::value_type {aka class std::shared_ptr<robot_trajectory::RobotTrajectory>}’ has no member named ‘joint_trajectory’
     for(int j=0;j<res.trajectory_[i].joint_trajectory.size();j++)
                                      ^~~~~~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:308:40: error: ‘__gnu_cxx::__alloc_traits<std::allocator<std::shared_ptr<robot_trajectory::RobotTrajectory> > >::value_type {aka class std::shared_ptr<robot_trajectory::RobotTrajectory>}’ has no member named ‘joint_trajectory’
       for(int k=0;k<res.trajectory_[i].joint_trajectory[j].points.size();k++)
                                        ^~~~~~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:309:42: error: ‘__gnu_cxx::__alloc_traits<std::allocator<std::shared_ptr<robot_trajectory::RobotTrajectory> > >::value_type {aka class std::shared_ptr<robot_trajectory::RobotTrajectory>}’ has no member named ‘joint_trajectory’
         for(int l=0;l<res.trajectory_[i].joint_trajectory[j].points[k].positions.size();l++)
                                          ^~~~~~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_planner.cpp:310:49: error: ‘__gnu_cxx::__alloc_traits<std::allocator<std::shared_ptr<robot_trajectory::RobotTrajectory> > >::value_type {aka class std::shared_ptr<robot_trajectory::RobotTrajectory>}’ has no member named ‘joint_trajectory’
           std::cout<<"traj"<<res.trajectory_[i].joint_trajectory[j].points[k].positions[l]<<"\n";
                                                 ^~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_planner.cpp.o] Error 1
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
